force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/PJN_Enrollment_Wizard_Record_List__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Enrollment Wizard
Purpose: Define object and fields to be presented on the Enrollment Wizard List component. This is step 6 in setting up the Enrollment Wizard.
Metadata Relationship(s): Enrollment Wizard Component
Created by Mavens: Yes</description>
    <label>Enrollment Wizard Record List</label>
    <pluralLabel>Enrollment Wizard Record Lists</pluralLabel>
</CustomObject>