force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/fields/PJN_Deletable__c.field-meta.xml
<CustomField>
    <fullName>PJN_Deletable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the action &quot;Delete&quot; is available in the table</description>
    <label>Deletable</label>
    <type>Checkbox</type>
</CustomField>