force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/fields/PJN_Editable__c.field-meta.xml
<CustomField>
    <fullName>PJN_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the action &quot;Edit&quot; is available in the table</description>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>