force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/fields/PJN_Enrollment_Wizard_Component__c.field-meta.xml
<CustomField>
    <fullName>PJN_Enrollment_Wizard_Component__c</fullName>
    <label>Enrollment Wizard Component</label>
    <referenceTo>PJN_Enrollment_Wizard_Component__mdt</referenceTo>
    <relationshipLabel>Enrollment Wizard Record Lists</relationshipLabel>
    <relationshipName>PJN_Enrollment_Wizard_Record_Lists</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>