force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/fields/PJN_Order_By__c.field-meta.xml
<CustomField>
    <fullName>PJN_Order_By__c</fullName>
    <label>Order By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>