force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/fields/PJN_SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_SObject_API_Name__c</fullName>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>