force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/fields/PJN_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>PJN_Where_Clause__c</fullName>
    <label>Where Clause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>