force-app/main/default/src/objects/PJN_Enrollment_Wizard_Record_List__mdt/listViews/PJN_All_Enrollment_Wizard_Record_Lists.listView-meta.xml
<ListView>
    <fullName>PJN_All_Enrollment_Wizard_Record_Lists</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>PJN_Order_By__c</columns>
    <columns>PJN_Fields__c</columns>
    <columns>PJN_RecordType_DeveloperName__c</columns>
    <columns>PJN_Enrollment_Wizard_Component__c</columns>
    <columns>PJN_Care_Plan_Lookup_Field_API_Name__c</columns>
    <columns>PJN_Deletable__c</columns>
    <columns>PJN_Editable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Enrollment Wizard Record Lists</label>
    <language>en_US</language>
</ListView>